--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,21 @@
-title: My blog
-description: My very nice blog
-author: "Jorge Sanz"
+title: Adrian Jarret
+description: Personal academic webpage.
+author:
+  name: "Adrian Jarret"
+  email: adrian.jarret@epfl.ch
 
 theme: minima
 
-base_url: /gh-pages-minima-starter
+# base_url: /gh-pages-minima-starter
 
 # Minima social links
-twitter_username: xurxosanz
-github_username: jsanz
-linkedin_username: jsanz
-rss: rss
+# twitter_username: xurxosanz
+github_username: AdriaJ
+# linkedin_username: jsanz
+# rss: rss
 
 # Minima: show excerpts in the frontpage
-show_excerpts: true
+# show_excerpts: true
 
 minima:
   date_format: "%Y-%m-%d"
@@ -27,7 +29,7 @@ header_pages:
 include:
     - _pages
 
-exclude: 
+exclude:
     - .gitignore
     - docker-compose.yml
     - Gemfile
